--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build_dbg": "test $IS_SCRIPT && ng build --eval-source-map --plugin ~inline_sources_maps.js && $CHROME_APP_CMD http://reload.extensions && sleep 2 && $CHROME_APP_CMD --app-id=$CHROME_APP_ID",
+    "build_dbg": "test $IS_SCRIPT && ng build --eval-source-map --plugin ~inline_sources_maps.js && $CHROME_APP_CMD --app-id=$CHROME_APP_ID && ng build --watch --eval-source-map --plugin ~inline_sources_maps.js",
     "serve_dbg": "sh chromeid.sh",
     "test": "ng test",
     "lint": "ng lint",
