--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc --noEmit --resolveJsonModule",
     "type-check:watch": "npm run type-check -- --watch",
     "build": "npm run build:types && npm run build:js",
-    "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
+    "build:types": "tsc --emitDeclarationOnly --resolveJsonModule",
+    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline --resolveJsonModule",
     "start": "node ./lib/index.js",
     "compile_and_start": "npm run build && npm run start"
   },
@@ -20,7 +20,10 @@
     "@types/node": "^13.9.8",
     "fastify-plugin": "^1.6.1",
     "regenerator-runtime": "^0.13.5",
-    "fluent-schema": "^0.10.0"
+    "fluent-schema": "^0.10.0",
+    "sequelize": "^5.21.5",
+    "@types/validator": "^12.0.1",
+    "@types/bluebird": "^3.5.30"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
