--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "type-check": "tsc --noEmit --resolveJsonModule",
+    "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "build": "npm run build:types && npm run build:js",
-    "build:types": "tsc --emitDeclarationOnly --resolveJsonModule",
-    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline --resolveJsonModule",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
     "start": "node ./lib/index.js",
     "compile_and_start": "npm run build && npm run start"
   },
@@ -16,14 +16,20 @@
   "author": "",
   "license": "See LICENSE in ../LICENSE.md",
   "dependencies": {
-    "fastify": "^2.13.0",
+    "@types/bluebird": "^3.5.30",
     "@types/node": "^13.9.8",
-    "fastify-plugin": "^1.6.1",
-    "regenerator-runtime": "^0.13.5",
-    "fluent-schema": "^0.10.0",
-    "sequelize": "^5.21.5",
     "@types/validator": "^12.0.1",
-    "@types/bluebird": "^3.5.30"
+    "fastify": "^2.13.0",
+    "fastify-plugin": "^1.6.1",
+    "fluent-schema": "^0.10.0",
+    "mariadb": "^2.3.1",
+    "mysql2": "^2.1.0",
+    "pg": "^8.0.0",
+    "pg-hstore": "^2.3.3",
+    "regenerator-runtime": "^0.13.5",
+    "sequelize": "^5.21.5",
+    "sqlite3": "^4.1.1",
+    "tedious": "^8.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
