--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "pg": "^8.0.0",
     "pg-hstore": "^2.3.3",
     "regenerator-runtime": "^0.13.5",
-    "sequelize": "^5.21.5",
+    "sequelize-typescript": "^1.1.0",
+    "sequelize": "^5.21.6",
     "sqlite3": "^4.1.1",
     "tedious": "^8.2.0"
   },
