--- a/backend/package.json
+++ b/backend/package.json
@@ -30,12 +30,14 @@
     "sequelize-typescript": "^1.1.0",
     "sequelize": "^5.21.6",
     "sqlite3": "^4.1.1",
-    "tedious": "^8.2.0"
+    "tedious": "^8.2.0",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-typescript": "^7.9.0",
     "typescript": "^3.8.3"
