--- a/backend/package.json
+++ b/backend/package.json
@@ -22,16 +22,18 @@
     "fastify": "^2.13.0",
     "fastify-plugin": "^1.6.1",
     "fluent-schema": "^0.10.0",
+    "jsonwebtoken": "^8.5.1",
+    "@types/jsonwebtoken": "^8.3.9",
     "mariadb": "^2.3.1",
     "mysql2": "^2.1.0",
     "pg": "^8.0.0",
     "pg-hstore": "^2.3.3",
+    "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.5",
-    "sequelize-typescript": "^1.1.0",
     "sequelize": "^5.21.6",
+    "sequelize-typescript": "^1.1.0",
     "sqlite3": "^4.1.1",
-    "tedious": "^8.2.0",
-    "reflect-metadata": "^0.1.13"
+    "tedious": "^8.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
