chrome api get fix, refactor, cors

--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -5,7 +5,7 @@
     "icons": {
         "128": "icon_128.png"
     },
-    "permissions": ["storage"],
+    "permissions": ["storage", "http://localhost:3000/*"],
     "app": {
         "background": {
             "scripts": [
